--- a/django_login_system-master/users/templates/users/tools.html
+++ b/django_login_system-master/users/templates/users/tools.html
@@ -6,38 +6,34 @@
 {% endblock style %} {% block content %}
 
 <div class="main-container">
-  <div class="heading">
+  <!-- <div class="heading">
     <h1 class="heading_title">Info Grepper Toolkit</h1>
     <p class="heading_credits">
-      <a class="heading_link"
-        >Streamline data gathering with our comprehensive suite of tools.</a
-      >
+      <a class="heading_link">Streamline data gathering with our comprehensive suite of tools.</a>
     </p>
+  </div> -->
+
+  {% if favorite_tools %}
+  <div class="fav-title">
+    <h1>Favorite Tools</h1>
+  </div>
+  <div class="cards fav-tools">
+    {% for tool in favorite_tools %}
+    <div class="card">
+      <div class="card_icon">{{ tool.name }}</div>
+      <h2 class="card_title">{{ tool.description }}</h2>
+      <p class="card_apply">
+        <a class="card_link" href="{{ tool.url }}">GO</a>
+      </p>
+    </div>
+    {% endfor %}
+  </div>
+  {% endif %}
+
+  <div class="fav-title" style="margin-top: 2rem;">
+    <h1>All Tools</h1>
   </div>
   <div class="cards">
-    <!-- <div class="card card-1">
-            {% if user.is_authenticated %}
-            <div id="fav-btn">
-                <a href="{% url 'ipgeo_download' %}" ><i class='bx bx-heart'></i></a>  
-            </div>
-            {%endif%}
-            <div class="card_icon">WebURL Scraper</div>
-            <h2 class="card_title">
-                This python script focuses on retreving all the webpages links from a given Url. The program access the website and returns all the links present in the website.
-            </h2>
-            <p class="card_apply">
-                <a class="card_link" href="{% url 'WebScrapper' %}">GO</a>
-            </p>
-        </div> -->
-    <!-- <div class="card card-2">
-            <div class="card_icon">IPGeo</div>
-            <h2 class="card_title">
-                This is used to find details of the provided input. Input supports domain-name, IPV4 & IPV6.
-            </h2>
-            <p class="card_apply">
-                <a class="card_link" href="{% url 'IPGeo' %}">GO</a>
-            </p>
-        </div> -->
     {% for tool in tools %}
     <div class="card">
       <form action="{% url 'addfav' %}" method="POST">
