--- a/django_login_system-master/users/templates/dashboard/dashboard.html
+++ b/django_login_system-master/users/templates/dashboard/dashboard.html
@@ -73,7 +73,7 @@
                          </li>
                          {% endif %}
                          <li class="nav-link">
-                              <a href="#">
+                              <a href="{% url 'favtools' %}">
                                    <i class='bx bx-heart icon'></i>
                                    <span class="text nav-text">Favorite</span>
                               </a>
@@ -87,27 +87,6 @@
                          </li>
                     </ul>
                </div>
-
-               <!-- <div class="bottom-content">
-                    <li class="">
-                         <a href="{% url 'logout' %}">
-                              <i class='bx bx-log-out icon'></i>
-                              <span class="text nav-text" >Logout</span>
-                         </a>
-                    </li>
-
-                    <li class="mode">
-                         <div class="sun-moon">
-                              <i class='bx bx-moon icon moon'></i>
-                              <i class='bx bx-sun icon sun'></i>
-                         </div>
-                         <span class="mode-text text">Dark mode</span>
-
-                         <div class="toggle-switch">
-                              <span class="switch"></span>
-                         </div>
-                    </li>
-               </div> -->
           </div>
      </nav>
 
